--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,32 @@ footer {
 
 @media screen and (max-width: 450px) {
     /* header */
+    /* third section */
+    .activity {
+        max-height: 175px;
+        margin: 15px 0 15px 0;
+    }
+    .activity-dual {
+        flex-wrap: nowrap;
+        max-height: 410px;
+    }
+    .card-60,
+    .card-35,
+    .card-50 {
+        height: 100%;
+    }
+    .activity-title {
+        margin-top: 3%;
+    }
+    .card-60>.activity-img,
+    .card-50>.activity-img,
+    .activity-img {
+        object-fit: cover;
+        height: 70%;
+    }
+    .activity-info {
+        padding-left: 20px;
+    }
     /* footer */
     .footer {
         flex-direction: column;
