--- a/css/style.css
+++ b/css/style.css
@@ -490,6 +490,178 @@ footer {
 }
 
 
+/* tablet responsive */
+
+@media screen and (max-width: 1024px) {
+    /* header */
+    header {
+        padding: 0;
+        flex-wrap: wrap;
+    }
+    #logo {
+        margin-left: 35px;
+    }
+    .header-nav>a:focus,
+    .header-signup>a:focus {
+        border-bottom: 2px solid #0065FC;
+        padding-bottom: 20px;
+        border-top: 0;
+        padding-top: 0px;
+        color: #0065FC;
+    }
+    .header-nav>a {
+        width: 50%;
+        text-align: center;
+    }
+    .header-signup {
+        display: none;
+    }
+    .header-signup-mobile {
+        display: initial;
+    }
+    .header-signup-mobile>a {
+        color: #0065FC;
+        font-weight: 700;
+        text-decoration: none;
+        margin-right: 35px;
+    }
+    .global-header-nav {
+        padding-right: 0;
+        width: 100%;
+    }
+    .header-nav {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        margin-top: 20px;
+    }
+    /* first section filter*/
+    .search-bar {
+        padding-left: 0px;
+        width: 90%;
+        margin: 0 auto 0 auto;
+    }
+    .bar {
+        margin-bottom: 20px;
+    }
+    .filters {
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .filter-child {
+        padding: 0;
+    }
+    .filter-title {
+        width: 100%;
+    }
+    /* second section accomodations */
+    .accomodations {
+        flex-direction: column-reverse;
+        padding-left: 0;
+        width: 100%;
+    }
+    .left-subsection {
+        max-width: 100%;
+        background-color: white;
+    }
+    .left-subsec-title {
+        margin-left: 5%;
+    }
+    .thumbnail {
+        background-color: white;
+        width: 90%;
+        height: 500px;
+    }
+    .thumbnail-img {
+        height: 75%;
+        width: 99%;
+    }
+    .show-more {
+        margin: 40px 0 40px 5%;
+    }
+    .most-popular {
+        border-radius: 0px;
+        margin: 0;
+        padding: 0 5% 40px 5%;
+        max-width: 90%;
+    }
+    .popular-top {
+        margin: 0;
+    }
+    .trend-thumbnail {
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+    .trend-icon {
+        height: 20px;
+        width: auto;
+    }
+    .trend-thumbnail-img {
+        height: 140px;
+        width: 120px;
+    }
+    .trend-thumbail-info {
+        width: auto;
+        margin-left: 10px;
+    }
+    .trend-thumbnail-rating {
+        margin-top: 10px;
+    }
+    /* third section activity */
+    .activity {
+        max-height: 175px;
+        margin: 15px 0 15px 0;
+    }
+    .activities {
+        flex-direction: column;
+    }
+    .activity-dual {
+        flex-wrap: nowrap;
+        max-height: 410px;
+    }
+    .card-60,
+    .card-35,
+    .card-50 {
+        height: 100%;
+    }
+    .activity-title {
+        margin-top: 3%;
+    }
+    .card-60>.activity-img,
+    .card-50>.activity-img,
+    .activity-img {
+        object-fit: cover;
+        height: 70%;
+    }
+    /* footer */
+    .footer {
+        flex-direction: column;
+    }
+    .about,
+    .services,
+    .help {
+        width: 100%;
+    }
+    .about-list {
+        list-style: none;
+        margin-left: -40px;
+    }
+    .about-list-element {
+        line-height: 30px;
+    }
+    .services-list {
+        list-style: none;
+        margin-left: -40px;
+    }
+    .services-list-element {
+        line-height: 30px;
+    }
+    .help {
+        width: 33%;
+    }
+}
+
+
 /* phone responsive */
 
 @media screen and (max-width: 450px) {
