--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     src: url(fonts/Raleway/Raleway-VariableFont_wght.ttf);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body,
 button,
 input {
